# simple-db

./: .gitignore  Cargo.toml  README.md
src/crates/sql_execution/: Cargo.toml
src/crates/sql_execution/src/: error.rs  lib.rs  row.rs  table.rs
src/crates/sql_parser/: Cargo.toml
src/crates/sql_parser/src/: ast.rs  error.rs  lib.rs  parse.rs
src/crates/sql_parser/src/commands/: create.rs  insert.rs  mod.rs  select.rs
src/crates/sql_repl/: Cargo.toml
src/crates/sql_repl/src/: display.rs  main.rs
