[package]
name = "sql_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.2"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
